<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_training"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_training" />
    <item
        android:id="@+id/nav_ai_coach"
        android:icon="@drawable/ic_camera"
        android:title="@string/nav_ai_coach" />

    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add"
        android:title= "@string/nav_exercise_add" />

    <item
        android:id="@+id/nav_shopping"
        android:icon="@drawable/ic_shopping"
        android:title="@string/nav_shopping" />

    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/ic_user"
        android:title="@string/nav_user" />
</menu>